--- a/Presentazioni/Project2/sense.tex
+++ b/Presentazioni/Project2/sense.tex
@@ -20,6 +20,48 @@
 \definecolor{PurpleKeyword}{RGB}{184,84,212}
 \definecolor{GrayComment}{RGB}{170,170,170}
 \definecolor{GoldDocumentation}{RGB}{180,165,45}
+
+\lstdefinelanguage{cpp}
+{
+    language=C++,
+    columns=fullflexible,
+    keepspaces=true,
+    frame=single,
+    framesep=0pt,
+    framerule=0pt,
+    framexleftmargin=4pt,
+    framexrightmargin=4pt,
+    framextopmargin=5pt,
+    framexbottommargin=3pt,
+    xleftmargin=4pt,
+    xrightmargin=4pt,
+    backgroundcolor=\color{GrayCodeBlock},
+    basicstyle=\ttfamily\color{BlackText},
+    keywordstyle=\color{PurpleKeyword},
+    keywordsprefix={},
+    keywords={
+        alignas,alignof,and,and_eq,asm,auto,bitand,bitor,bool,break,case,catch,char,char16_t,char32_t,
+        class,compl,const,constexpr,const_cast,continue,decltype,default,delete,do,double,
+        dynamic_cast,else,enum,explicit,export,extern,false,float,for,friend,goto,if,inline,int,long,
+        mutable,namespace,new,noexcept,not,not_eq,nullptr,operator,or,or_eq,private,protected,public,
+        register,reinterpret_cast,return,short,signed,sizeof,static,static_assert,static_cast,struct,switch,
+        template,this,thread_local,throw,true,try,typedef,typeid,typename,union,unsigned,using,virtual,void,
+        volatile,wchar_t,while,xor,xor_eq
+    },
+    ndkeywords={
+        std,string,vector,map,set,unordered_map,unordered_set, SynsetPtr,
+        cout,cin,endl,nullptr,size_t,int32_t,int64_t,uint32_t,uint64_t,
+        std::string,std::vector,std::map,std::set,std::unordered_map,std::unordered_set
+    },
+    ndkeywordstyle=\color{RedTypename},
+    comment=[l][\color{GrayComment}\slshape]{//},
+    morecomment=[s][\color{GrayComment}\slshape]{/*}{*/},
+    morecomment=[l][\color{GoldDocumentation}\slshape]{///},
+    morecomment=[s][\color{GoldDocumentation}\slshape]{/*!}{*/},
+    morecomment=[l][\color{GoldDocumentation}\slshape]{//!},
+    stringstyle=\color{GreenString},
+    string=[b]",
+}
 \lstdefinelanguage{rust}
 {
     columns=fullflexible,
@@ -40,11 +82,11 @@
         unsafe,async,await,move,
         use,pub,crate,super,self,mod,
         struct,enum,fn,const,static,let,mut,ref,type,impl,dyn,trait,where,as,
-        break,continue,if,else,while,for,loop,match,return,yield,in
+        break,continue,if,else,while,for,loop,match,return,yield,in,push
     },
     keywordstyle=\color{PurpleKeyword},
     ndkeywords={
-        bool,u8,u16,u32,u64,u128,i8,i16,i32,i64,i128,char,str,
+        bool,u8,u16,u32,u64,f64,u128,i8,i16,i32,i64,i128,char,str, usize, WeightedIndex,
         Self,Option,Some,None,Result,Ok,Err,String,Box,Vec,Rc,Arc,Cell,RefCell,HashMap,BTreeMap,
         macro_rules
     },
