--- a/Presentazioni/Project3/Paper/pseudodictionary.tex
+++ b/Presentazioni/Project3/Paper/pseudodictionary.tex
@@ -19,10 +19,9 @@
 \maketitle
 
 \begin{abstract}
-This paper investigates the construction of cross-lingual pseudodictionaries designed to minimize lexical ambiguity through optimal translation pair selection. Building on the observation that historical, cultural, and geographic factors create varying degrees of sense alignment between languages, I propose a method that systematically selects word pairs ($L_1$-$L_k$) maximizing the Ambiguity Reduction Score (ARS). My approach leverages these naturally occurring asymmetries in semantic overlap to create a resource that preferentially includes translation pairs demonstrating the strongest sense alignment. The resulting pseudodictionary provides empirically optimized word mappings that significantly reduce polysemy. It has applications in machine translation and word sense disambiguation.
+This paper investigates the construction of cross-lingual pseudodictionaries designed to minimize lexical ambiguity through optimal translation pair selection. Building on the observation that historical, cultural, and geographic factors create varying degrees of sense alignment between languages, a method is proposed that systematically selects word pairs ($L_1$-$L_k$) maximizing the Ambiguity Reduction Score (ARS). The approach leverages these naturally occurring asymmetries in semantic overlap to create a resource that preferentially includes translation pairs demonstrating the strongest sense alignment. The resulting pseudodictionary provides empirically optimized word mappings that significantly reduce polysemy. It has applications in machine translation and word sense disambiguation.
 \keywords{NLP \and Languages \and Semantic.}
 \end{abstract}
-
 \section{Introduction}
 
 \subsection{The Key Idea}
